--- a/openthread_border_router/config.yaml
+++ b/openthread_border_router/config.yaml
@@ -1,10 +1,10 @@
 ---
 version: 2.13.0
 slug: openthread_border_router
-name: OpenThread Border Router
+name: OpenThread Border Router(TBR-2)
 description: OpenThread Border Router add-on
 url: >-
-  https://github.com/home-assistant/addons/tree/master/openthread_border_router
+  https://github.com/raphael1688dev/TBR-2/tree/master/openthread_border_router
 arch:
   - aarch64
   - amd64
@@ -30,16 +30,17 @@ options:
   flow_control: true
   autoflash_firmware: true
   otbr_log_level: notice
-  firewall: true
+  firewall: false
   nat64: false
+  network_device: null
 ports:
-  8080/tcp: null
-  8081/tcp: null
+  8180/tcp: null
+  8181/tcp: null
 ports_description:
-  8080/tcp: OpenThread Web port
-  8081/tcp: OpenThread REST API port
+  8180/tcp: OpenThread Web port
+  8181/tcp: OpenThread REST API port
 schema:
-  device: device(subsystem=tty)
+  device: str?
   baudrate: list(57600|115200|230400|460800|921600)
   flow_control: bool
   network_device: str?
