--- a/openthread_border_router/config.yaml
+++ b/openthread_border_router/config.yaml
@@ -20,8 +20,8 @@ host_uts: true
 privileged:
   - IPC_LOCK
   - NET_ADMIN
-devices:
-  - /dev/net/tun
+#devices:
+#  - /dev/net/tun
 image: homeassistant/{arch}-addon-otbr
 init: false
 options:
