--- a/openthread_border_router/config.yaml
+++ b/openthread_border_router/config.yaml
@@ -1,5 +1,5 @@
 ---
-version: 2.13.0
+version: 2.12.4
 slug: openthread_border_router
 name: OpenThread Border Router(TBR-2)
 description: OpenThread Border Router add-on
@@ -20,12 +20,12 @@ host_uts: true
 privileged:
   - IPC_LOCK
   - NET_ADMIN
-#devices:
-#  - /dev/net/tun
+devices:
+  - /dev/net/tun
 image: homeassistant/{arch}-addon-otbr
 init: false
 options:
-  device: null
+  device: /dev/null
   baudrate: "460800"
   flow_control: true
   autoflash_firmware: true
