--- a/openthread_border_router/config.yaml
+++ b/openthread_border_router/config.yaml
@@ -1,5 +1,5 @@
 ---
-version: 2.12.4
+version: 2.13.0
 slug: openthread_border_router
 name: OpenThread Border Router(TBR-2)
 description: OpenThread Border Router add-on
@@ -22,6 +22,7 @@ privileged:
   - NET_ADMIN
 devices:
   - /dev/net/tun
+privileged: true
 image: homeassistant/{arch}-addon-otbr
 init: false
 options:
