--- a/openthread_border_router/config.yaml
+++ b/openthread_border_router/config.yaml
@@ -17,12 +17,12 @@ discovery:
 host_ipc: false
 host_network: true
 host_uts: true
-privileged:
-  - IPC_LOCK
-  - NET_ADMIN
+privileged: true
+#privileged:
+#  - IPC_LOCK
+#  - NET_ADMIN
 devices:
   - /dev/net/tun
-privileged: true
 image: homeassistant/{arch}-addon-otbr
 init: false
 options:
