--- a/openthread_border_router/config.yaml
+++ b/openthread_border_router/config.yaml
@@ -27,7 +27,7 @@ devices:
 image: homeassistant/{arch}-addon-otbr
 init: false
 options:
-  device: /dev/null
+  device: null
   baudrate: "460800"
   flow_control: true
   autoflash_firmware: false
