--- a/openthread_border_router/config.yaml
+++ b/openthread_border_router/config.yaml
@@ -18,10 +18,10 @@ discovery:
 host_ipc: true
 host_network: true
 host_uts: true
-#privileged: true
-privileged:
-  - IPC_LOCK
-  - NET_ADMIN
+privileged: true
+#privileged:
+#  - IPC_LOCK
+#  - NET_ADMIN
 devices:
   - /dev/net/tun
 image: homeassistant/{arch}-addon-otbr
