--- a/openthread_border_router/config.yaml
+++ b/openthread_border_router/config.yaml
@@ -24,8 +24,8 @@ privileged: true
 #  - NET_ADMIN
 #devices:
 #  - /dev/net/tun
-devices:
-  - /dev/net/tun:/dev/net/tun
+#devices:
+#  - /dev/net/tun:/dev/net/tun
 image: homeassistant/{arch}-addon-otbr
 init: false
 options:
