--- a/openthread_border_router/config.yaml
+++ b/openthread_border_router/config.yaml
@@ -17,15 +17,15 @@ discovery:
 # IPC is only used within the Add-on
 #host_ipc: false
 host_ipc: true
-host_network: true
-#host_network: false
+#host_network: true
+host_network: false
 host_uts: true
 #privileged: true
 privileged:
   - IPC_LOCK
   - NET_ADMIN
 devices:
-  - /dev/net/tun
+  - /dev/net/tunTBR2
 #devices:
 #  - /dev/net/tun:/dev/net/tun
 image: homeassistant/{arch}-addon-otbr
