--- a/openthread_border_router/config.yaml
+++ b/openthread_border_router/config.yaml
@@ -24,11 +24,11 @@ host_uts: true
 privileged:
   - IPC_LOCK
   - NET_ADMIN
-#devices:
-#  - /dev/net/tun
+devices:
+  - /dev/net/tun
 #devices:
 #  - /dev/net/tun:/dev/net/tun
-image: homeassistant/{arch}-addon-otbr
+#image: homeassistant/{arch}-addon-otbr
 init: false
 options:
   device: null
