--- a/openthread_border_router/config.yaml
+++ b/openthread_border_router/config.yaml
@@ -18,7 +18,7 @@ discovery:
 #host_ipc: false
 host_ipc: true
 #host_network: true
-#host_network: false
+host_network: false
 host_uts: true
 #privileged: true
 privileged:
